# pattern-buffer

./: .gitignore  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: ADOPTION.md  HOST-DISCIPLINE.md  INGESTION-PLAYBOOK.md  LEXICON.md  ROADMAP-deferred.md  WHITEPAPER.md
docs/reference/: assertion-world-model-original.md  (+2 more)
specs/: AKA-CORRELATION-V1.md  ATTRIBUTE-SEMANTICS-V1.md  AWARENESS-READS-V1.1.md  AXIS-HEAD-V1.md  BOUNDED-READS-V1.md  BUILD-SESSION-V1.md  CLASSIFIER-EVENT-SAFETY-V1.md  CONFIDENCE-MULTIFRAME-V1.md  CONFIDENCE-V1.md  EXACT-DECIMAL-QUANTITIES-V1.md  IDENTITY-RECALL-V1.md  INGEST-HARDENING-V1.md  INGEST-LATENCY-V2.md  INGEST-V2.md  INGESTION-FIDELITY-V1.md  INGESTION-FIDELITY-V2.md  LIVE-FINDINGS-V1.md  MCP-WRAPPER-V1.md  MERGE-RECONCILE-VERB-V1.md  MERGE-RECONCILE-VERB-V2.md  MICRO-EVAL-V1.md  NUMERIC-QUANTITIES-V1.md  PATH-TEMPORAL-V1.md  PLACE-FEATURE-ABSTRACTION-V1.md  PORCELAIN-V1.md  RFC-001-attribute-semantics-as-data.md  RFC-002-the-unknown.md  RFC-003-edge-traversability.md  SHAPE-FIX-V1.md  SITUATION-LENS-V1.md  SPIKE-V1.md  STATUS.md  TRACKING-MODE-V1.md  TRIAGE-CONTEXT-V1.md  WHO-KNOWS-INVERSE-V1.md  WORLD-RETRIEVAL-V1.md  WORLD-RETRIEVAL-V2.md
tests/: test_aka_correlation.py  test_awareness_projection.py  test_axis_heads.py  test_bounded_reads.py  test_buffer.py  test_build_session.py  test_classifier_event_safety.py  test_confidence.py  test_confidence_multiframe.py  test_dump.py  test_exact_decimal.py  test_fidelity_audit.py  test_fold.py  test_fold_resolution.py  test_grammar.py  test_identity_containment_veto.py  test_identity_recall.py  test_identity_thunks.py  test_individuation_v2.py  test_ingest_frame_default.py  test_ingest_hardening.py  test_ingest_v2.py  test_ingestion_fidelity_v2.py  test_mcp_wrapper.py  test_merge_verb.py  test_path_temporal.py  test_place_feature.py  test_porcelain.py  test_route.py  test_scaffold.py  test_shape_fix.py  test_situation_lens.py  test_tracking_mode.py  test_triage_context.py  test_who_knows.py  test_world.py  test_world_retrieval.py
(+87 files in other folders)
