[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patternbuffer"
version = "0.1.0"
description = "A pattern buffer that never degrades: an append-only world-state substrate; everything else is a disposable projection."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.28,<2"]

[project.scripts]
patternbuffer-mcp = "patternbuffer.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
